feat/promotion for manager